2022-09-09T16:34:24Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3023933030
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 294 465 / 324 505
* notice: next accum: outdated-unq outdated-all / unq all: 294 465 / 321 501
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +9 +12 -3 -5 / 6 7
* notice: removed / changed dates: [] / [2022-08-26]

2022-09-09T08:33:04Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3021054797
* notice: last 14d: unq all: 16 40
* notice: prev accum: outdated-unq outdated-all / unq all: 294 465 / 322 504
* notice: next accum: outdated-unq outdated-all / unq all: 294 465 / 324 505
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-08-26 2022-09-09]

2022-09-09T02:34:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3019585961
* notice: last 14d: unq all: 16 39
* notice: prev accum: outdated-unq outdated-all / unq all: 293 463 / 320 499
* notice: next accum: outdated-unq outdated-all / unq all: 294 465 / 322 504
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +10 +12 -0 -0 / 10 12
* notice: removed / changed dates: [2022-08-25] / [2022-09-08]

2022-09-08T08:29:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013596499
* notice: last 14d: unq all: 14 36
* notice: prev accum: outdated-unq outdated-all / unq all: 293 463 / 312 491
* notice: next accum: outdated-unq outdated-all / unq all: 293 463 / 320 499
* notice: prev exec diff / last date diff / accum: unq all: +8 +8 -0 -0 / +8 +8 -0 -0 / 8 8
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-08T02:34:44Z: