@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-09T16:34:24Z",
-  "count_outdated" : 465,
-  "uniques_outdated" : 294,
-  "count" : 501,
-  "uniques" : 321,
+  "timestamp" : "2022-09-10T02:37:00Z",
+  "count_outdated" : 477,
+  "uniques_outdated" : 303,
+  "count" : 507,
+  "uniques" : 324,
   "clones" : [
-    {
-      "timestamp": "2022-08-26T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 1, 12 ],
-      "uniques": 6,
-      "uniques_minmax": [ 1, 9 ]
-    },
     {
       "timestamp": "2022-08-27T00:00:00Z",
       "count": 3,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-09-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
