@@ -1,12 +1,7 @@
 {
-  "count": 36,
-  "uniques": 13,
+  "count": 30,
+  "uniques": 11,
   "clones": [
-    {
-      "timestamp": "2022-08-26T00:00:00Z",
-      "count": 7,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-08-27T00:00:00Z",
       "count": 3,
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2022-09-09T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
