@@ -1,3 +1,11 @@
+2022-09-10T02:37:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026430859
+* notice: last 14d: unq all: 11 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 294 465 / 321 501
+* notice: next accum: outdated-unq outdated-all / unq all: 303 477 / 324 507
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-08-26] / [2022-09-09]
+
 2022-09-09T16:34:24Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3023933030
 * notice: last 14d: unq all: 13 36
